# BohdanAna

./: .gitignore  CMakeLists.txt
EstimatorsComparison/: CMakeLists.txt
EstimatorsComparison/analysis/: analysis.py
EstimatorsComparison/include/: TrackLengthDebug.h  TrackLengthDebugUtils.h  TrackLengthEstimators.h
EstimatorsComparison/job/: job.sh  send_jobs.sub
EstimatorsComparison/src/: TrackLengthDebug.cc  TrackLengthDebugUtils.cc  TrackLengthEstimators.cc  script_part.C
EstimatorsComparison/xml/: steer.xml
ExtrapolationAndTOF/: CMakeLists.txt  debug.txt  debug_prod.txt
ExtrapolationAndTOF/analysis/: analysis.py
ExtrapolationAndTOF/include/: TrackLengthDebug.h
ExtrapolationAndTOF/job/: job.sh  send_jobs.sub
ExtrapolationAndTOF/src/: TrackLengthDebug.cc
ExtrapolationAndTOF/xml/: steer.xml
HarmonicAndConsistency/analysis/: analysis.py
HarmonicAndConsistency/include/: TrackLengthDebug.h  TrackLengthDebugUtils.h
HarmonicAndConsistency/job/: job.sh  send_jobs.sub
HarmonicAndConsistency/src/: TrackLengthDebug.cc  TrackLengthDebugUtils.cc
HarmonicAndConsistency/xml/: steer.xml
ParametersEvolution/: CMakeLists.txt
ParametersEvolution/job/: send_jobs.sub
ParametersEvolution/src/: TrackLengthDebug.cc
ParametersEvolution/xml/: steer.xml
analysis/: analysis.py  bias_vs_m2.py  dm_vs_dt.py  draw_mass_1d.py  draw_tof_res_1d.py  kaon_mass.py  lin_uncrt_comparison.py  m_vs_p.py  m_vs_tofres.py  mass_uncertainty.py  momentum_distribution.py  momentum_option.py  my_utilities.py  omega_after_refit.py  omega_tanl.py  pid_impact.py  refit_impact.py  selection.py  sep_power.py  sep_power_via_p_value.py  sep_power_with_dedx.py  shower_time_uncertainties.py  shower_time_uncertainties_backup.py  tof.hpp  tof.py  tof_analysis.py  track_length.py  utils.py
analysis/hm_and_consistency/: analysis.py
analysis/konrad_ml/: analysis.py  analysis_rms90.py  analysis_rms90_yasser.py
analysis/my_utils/: __init__.py  draw_utils.py  particle_utils.py
analysis/trklen_estimators_comparison/: analysis.py  dm_vs_dl.py  dm_vs_dt.py
include/: BohdanAna.h  BohdanDrawing.h  BohdanUtils.h  EventDisplayer.h  TOF.h  TrackLength.h  TrackLengthDebug.h  TrackLengthEstimators.h  TrackLengthUtils.h
job/: job.sh  send_jobs.sub
src/: BohdanAna.cc  BohdanDrawing.cc  BohdanUtils.cc  EventDisplayer.cc  TOF.cc  TrackLength.cc  TrackLengthDebug.cc  TrackLengthEstimators.cc  TrackLengthUtils.cc
xml/: steer.xml
